# noid-ark

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 218589d74919_initial_migration.py  6b7be0abe7fe_remove_the_type_column.py
api/: ark_resolver.py  noid.py
db_config/: sqlalchemy_async_connect.py
lifespan/: lifespan.py
models/: models.py
models/data/: models.py
models/request/: noid_reqeust.py  noid_request.py
models/response/: noid_response.py
repository/: counter.py  noid_repo.py
utils/: error_handlers.py  noid_generator.py  settings.py
